--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -120,7 +120,7 @@ ul li img {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   min-width: 200px;
@@ -146,7 +146,7 @@ ul li img {
 }
 
 .dropdown-item:hover {
-  background-color: #f5f5f5;
+  background-color: #c8c8c8;
 }
 
 .dropdown-divider {
