--- a/src/styles/JourneyMap.css
+++ b/src/styles/JourneyMap.css
@@ -149,7 +149,7 @@
 .container {
   max-width: 1500px;
   margin: 0 auto;
-  padding: 92px 19px 20px 20px;
+  padding: 64px 16px 0 20px;
   width: 100%;
   box-sizing: border-box;
 }
