--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -72,7 +72,12 @@
 /* Adjust main content to account for sidebar */
 main {
     margin-left: 250px;
-    width: calc(100% - 250px);
+}
+
+@media (max-width: 900px) {
+    main {
+        margin-left: 0;
+    }
 }
 
 .sidebar-content ul li a img {
